Kubernetes/manifest/ingress/controller-service-prometheus.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/component: controller
  name: ingress-nginx-prometheus
  namespace: ingress-nginx
spec:
  type: ClusterIP
  ports:
    - name: prometheus
      port: 10254
      targetPort: prometheus
  selector:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/component: controller
