Kubernetes/manifest/ingress/bpp-ingress-monitoring.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: dashboard
  annotations:
    nginx.ingress.kubernetes.io/whitelist-source-range: 177.55.160.147/32
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/configuration-snippet: |
      rewrite ^(/dashboard)$ $1/ redirect;
  namespace: monitor
spec:
  rules:
  - host: kubernetes.hom-bpp.com.br # Mude para o seu endereço
    http:
      paths:
      - path: /dashboard(/|$)(.*)
        backend:
          serviceName: kubernetes-dashboard
          servicePort: 443

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: infracore
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    # nginx.ingress.kubernetes.io/default-backend: appsvc2
    nginx.ingress.kubernetes.io/whitelist-source-range: 177.55.160.147/32
    prometheus.io/scrape: "true"
    prometheus.io/port: "9113"
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS, DELETE"
    nginx.ingress.kubernetes.io/cors-allow-headers: "DNT,X-CustomHeader,X-LANG,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,X-Api-Key,X-Device-Id,Access-Control-Allow-Origin"
  namespace: monitor
spec:
  rules:
  - host: infracore.hom-bpp.com.br # Mude para o seu endereço
    http:
      paths:
      - path: /
        backend:
          serviceName: kube-prometheus-stack-grafana
          servicePort: 80
